--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -117,6 +117,10 @@ input[type=checkbox]:checked ~ * {
   filter: invert(1);
 }
 
+input[type=checkbox]:checked ~ .no-dark-mode {
+  filter: initial;
+}
+
 @media screen and (max-width: 1068px) {
   .nav-links {
     width: 50%;
@@ -190,7 +194,7 @@ section {
 
 /*Sections - Home -----------------------------------------------------------Sections - Home*/
 .home {
-  background-image: linear-gradient(120deg, #84ceeb 0%, #dddddd 100%);
+  background-image: linear-gradient(120deg, #fafafa 0%, #ffffff 100%);
   z-index: 1;
 }
 
@@ -213,7 +217,7 @@ section {
 
 /*Sections - About -----------------------------------------------------------Sections - About*/
 .about {
-  background-image: linear-gradient(240deg, #dddddd, #84ceeb 100%);
+  background-image: linear-gradient(240deg, #ffffff, #fafafa 100%);
   display: flex;
   flex-direction: column;
   z-index: 2;
@@ -288,7 +292,7 @@ section {
 
 /*Sections - Contact -----------------------------------------------------------Sections - Contact*/
 .contact {
-  background-image: linear-gradient(120deg, #84ceeb 0%, #dddddd 100%);
+  background-image: linear-gradient(120deg, #fafafa 0%, #ffffff 100%);
   display: flex;
   flex-direction: column;
   z-index: 3;
@@ -321,7 +325,7 @@ section {
 
 /*Sections - Portfolio -----------------------------------------------------------Sections - Portfolio*/
 .portfolio {
-  background-image: linear-gradient(240deg, #84ceeb 0%, #dddddd 100%);
+  background-image: linear-gradient(240deg, #fafafa 0%, #ffffff 100%);
   display: flex;
   flex-direction: column;
   z-index: 4;
